--- a/public/stylesheets/home/main.css
+++ b/public/stylesheets/home/main.css
@@ -353,7 +353,7 @@ footer {
   transform: translate3d(-50%, -50%, 0);
   width: 50px;
   height: 50px;
-  background: no-repeat center/100% url("../images/loading-icon.gif"); }
+  background: no-repeat center/100% url("../../images/loading-icon.gif"); }
 
 .modal__loading-icon--invisible {
   visibility: hidden; }
@@ -410,7 +410,7 @@ footer {
 .loading-icon {
   width: 60px;
   height: 60px;
-  background: no-repeat center/100% url("../images/loading-icon.gif");
+  background: no-repeat center/100% url("../../images/loading-icon.gif");
   margin: auto; }
 
 /*# sourceMappingURL=main.css.map */
