--- a/public/stylesheets/work/main.css
+++ b/public/stylesheets/work/main.css
@@ -198,7 +198,11 @@ footer {
   overflow: hidden;
   cursor: pointer;
   transition: opacity 1.3s; }
-  @media only screen and (max-width: 425px) {
+  @media only screen and (max-width: 1100px) {
+    .project {
+      width: 33vw;
+      height: 33vw; } }
+  @media only screen and (max-width: 770px) {
     .project {
       width: 50vw;
       height: 50vw; } }
