--- a/sass/lab/partials/_project.scss
+++ b/sass/lab/partials/_project.scss
@@ -7,7 +7,11 @@
   cursor: pointer;
   transition: opacity 1.3s;
 
-  @media only screen and (max-width: 425px) {
+  @media only screen and (max-width: 1100px) {
+    width: 33vw; height: 33vw;
+  }
+
+  @media only screen and (max-width: 770px) {
     width: 50vw; height: 50vw;
   }
 
